# SCRIBE

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
presets/: ja-romaji-standard.json  zh-opencpop-extension.json  zh-opencpop-strict.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  f0.rs  lib.rs  main.rs
src-tauri/src/fcpe/: format.rs  mel.rs  mod.rs  model.rs  ops.rs
src-tauri/src/rmvpe/: format.rs  mel.rs  mod.rs  model.rs  ops.rs  post.rs
src-tauri/src/some/: format.rs  mel.rs  mod.rs  model.rs  ops.rs  post.rs
src/audio/: audioEngine.ts  f0Extract.ts  pianoSampler.ts  sineWave.ts
src/canvas/: coordTransform.ts  f0Renderer.ts  gridRenderer.ts  hitTest.ts  interactionHandlers.ts  mergeHandler.ts  noteRenderer.ts  overlayRenderer.ts  restPitch.ts  splitHandler.ts  waveformRenderer.ts
src/components/ContextMenus/: ContextMenu.tsx  NoteContextMenu.tsx  PhonemeContextMenu.tsx  RollContextMenu.tsx  SegmentContextMenu.tsx  WordContextMenu.tsx
src/components/Sidebar/: NavTop.tsx  (+5 more)
src/data/: phNumPresets.ts
src/engine/: constraintEngine.ts  midiEstimator.ts  phNumInfer.ts  slurDeriver.ts  slurSplitter.ts  someEstimator.ts  undoManager.ts  wordGroupDeriver.ts
src/ipc/: backendInterface.ts  pythonSidecar.ts
src/stores/: audioStore.ts  editorStore.ts  projectStore.ts  settingsStore.ts  statusStore.ts
src/types/: index.ts
src/utils/: csvExporter.ts  csvParser.ts  formatters.ts  midiUtils.ts  projectFile.ts
(+20 files in other folders)
