[package]
name = "scribe"
version = "0.1.0"
description = "SCRIBE - DiffSinger variance dataset annotation tool"
authors = ["you"]
edition = "2021"
default-run = "scribe"

[lib]
name = "scribe_lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "scribe"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hound = "3"
cpal = "0.15"
rustfft = "6"
rayon = "1"

[features]
asio = ["cpal/asio"]

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

